# knit-simulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Simulator.cpp  Simulator.h  SimulatorParams.h  easy_profiler_stub.h  helloworld.yarns  knit-2x2.yarns  main.cpp  sm.cpp  test2.yarns
cmake/: FindGLM.cmake  FindLIBIGL.cmake
example_data/: 5_5.yarns  knit-4x4.yarns  short-row.yarns  sock.yarns  test.yarns
file_format/: Entry.cpp  Entry.h  ViewerState.cpp  ViewerState.h  yarnRepr.cpp  yarnRepr.h  yarns.cpp  yarns.h
scripts/: cpplint.sh
simulator/: BaseSimulator.cpp  BaseSimulator.h  Cache.h  CacheArray2D.h  Constraints.cpp  Constraints.h  DiscreteSimulator.cpp  DiscreteSimulator.h  Enum.h  Helper.cpp  Helper.h  JacobiMethod.h  ParallelWorker.h  Simulator.Dglobal.cpp  Simulator.Ebend.cpp  Simulator.Ecollision.cpp  Simulator.Elength.cpp  Simulator.cpp  Simulator.h  SimulatorParams.h  macros.h
simulator/threading/: threading.cpp  threading.h
src/: easy_profiler_stub.h  main.cpp
src/file_format/: Entry.cpp  ViewerState.cpp  ViewerState.h  yarnRepr.cpp  yarnRepr.h  yarns.cpp  yarns.h
src/simulator/: BaseSimulator.cpp  BaseSimulator.h  CacheArray2D.h  Constraints.cpp  Constraints.h  DiscreteSimulator.cpp  Helper.cpp  Helper.h  Simulator.Dglobal.cpp  Simulator.Ebend.cpp  Simulator.Elength.cpp  Simulator.cpp  Simulator.h  SimulatorParams.h
src/threading/: threading.cpp  threading.h
src/ui/: AnimationManager.cpp  HistoryManager.cpp  menu.cpp  sweep.cpp  viewer.cpp  viewer.h
threading/: ctpl_stl.h  threading.cpp  threading.h
ui/: AnimationManager.cpp  AnimationManager.h  HistoryManager.cpp  HistoryManager.h  menu.cpp  menu.h  sweep.cpp  sweep.h  viewer.cpp  viewer.h
